--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-fastapi>=0.108.0
+fastapi>=0.110.0
 uvicorn>=0.25.0
 pydantic>=2.5.3
-jinja2>=3.1.2
+jinja2>=3.1.3
 requests>=2.31.0
 influxdb>=5.3.1
 aiosqlite>=0.19.0
+black
